
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PhotoMapper"
version = "0.1.0"
description = "Photo organizer"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
photomapper = "PhotoMapper.__main__:main"